[gd_scene load_steps=9 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Scooter.tscn" type="PackedScene" id=2]
[ext_resource path="res://City.tscn" type="PackedScene" id=3]
[ext_resource path="res://Car.tscn" type="PackedScene" id=4]
[ext_resource path="res://SmoothRotatingCamera2D.gd" type="Script" id=5]
[ext_resource path="res://Trash.tscn" type="PackedScene" id=7]
[ext_resource path="res://PickupArea.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 2000.0

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="City" parent="." instance=ExtResource( 3 )]
position = Vector2( 1, 0 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 108, 705 )

[node name="SmoothRotatingCamera2D" type="Node2D" parent="Player"]
script = ExtResource( 5 )

[node name="CarSpawnArea" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/CarSpawnArea"]
shape = SubResource( 1 )

[node name="PickupArea" parent="." instance=ExtResource( 9 )]
position = Vector2( 827, 135 )

[node name="Objects" type="Node" parent="."]

[node name="Trash1" parent="Objects" instance=ExtResource( 7 )]
position = Vector2( 733, 534 )

[node name="Trash2" parent="Objects" instance=ExtResource( 7 )]
position = Vector2( 778, 473 )

[node name="Trash3" parent="Objects" instance=ExtResource( 7 )]
position = Vector2( 778, 592 )

[node name="Trash4" parent="Objects" instance=ExtResource( 7 )]
position = Vector2( 821, 530 )

[node name="Car" parent="Objects" instance=ExtResource( 4 )]
position = Vector2( 212, 746 )
rotation = 0.115192

[node name="Camera2D_test" type="Camera2D" parent="Objects/Car"]
visible = false
position = Vector2( -130.091, -219.502 )
rotation = -0.115192
scale = Vector2( 1, 1 )
rotating = true
smoothing_enabled = true

[node name="CarSpawnTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="area_entered" from="Player/CarSpawnArea" to="." method="_on_CarSpawnArea_area_entered"]
[connection signal="area_exited" from="Player/CarSpawnArea" to="." method="_on_CarSpawnArea_area_exited"]
[connection signal="body_exited" from="Player/CarSpawnArea" to="." method="_on_CarSpawnArea_body_exited"]
[connection signal="body_entered" from="PickupArea" to="." method="_on_PickupArea_body_entered"]
[connection signal="body_exited" from="PickupArea" to="." method="_on_PickupArea_body_exited"]
[connection signal="timeout" from="CarSpawnTimer" to="." method="_on_CarSpawnTimer_timeout"]
